--- a/style.css
+++ b/style.css
@@ -5,13 +5,22 @@
 /* imports */
 
 
-/* .outercontainer{
-    min-height: 60vh;
+/* html, body{
+    height: 100%;
+    width: 100%;
 } */
-.container{
-    padding: 0 1em;
+
+body {
+    text-align: center;
+    margin: 0 auto;
 }
-/* background-img */
+
+.container {
+    min-height: 80vh;
+    padding: 0 1em;
+
+}
+
 #hero-bg {
     background-image: url("assets/hero.jpg");
     background-repeat: no-repeat;
@@ -30,7 +39,7 @@
     font-size: 5rem;
 }
 
-.welcome{
+.welcome {
     font-family: 'Lora', serif;
     font-family: 'Playfair Display', serif;
     text-transform: uppercase;
@@ -125,15 +134,10 @@
 
 .about-bg {
     background-image: url("assets/img-1.jpg");
-    /* min-height: 40vh;
-    min-width: 40vw; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     border-radius: 25px;
-    /* width: 600px; */
-    /* height: 200px;
-    margin: 20px; */
     border: 3px solid #ccc;
 }
 
@@ -173,26 +177,14 @@
 
 
 
-/* .details {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: auto;
-    width: 100%;
-    min-height: 600px;
-    display: flex;
-} */
-
-
-
 .icon {
     border-radius: 10%;
-    height: 150px;
-    width: 150px;
+    width: 8em;
+    height: 8em;
     margin: 20px;
-    padding: 1em; 
+    padding: 1em;
     border: 3px solid rgb(247, 247, 247);
-    
+
 
 }
 
@@ -201,18 +193,16 @@ p {
     font-family: 'Lora', serif;
     font-family: 'Playfair Display', serif;
     display: flex;
-    height: 150px;
-    align-items: center;
-
+    font-size: 4.5vw;
+    text-align: center;
 }
 
 p {
-    font-size: 20px;
-    ;
+    font-size: 2.3vmin;
 }
 
-.details-info{
-    background-image:url('assets/banner-1.jpg');
+.details-info {
+    background-image: url('assets/banner-1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
@@ -220,13 +210,18 @@ p {
     position: relative;
     color: rgb(254, 250, 250);
     text-shadow: 3px 3px 3px rgba(247, 241, 241, 0.5)
-
 }
+
 /* media-queries */
 
 
 @media (max-width: 768px) {
-    #hero-bg, .details-info,.about-bg, #team-bg {
+
+    .container,
+    #hero-bg,
+    .details-info,
+    .about-bg,
+    #team-bg {
         max-width: 100%;
         min-height: 50vh;
         min-width: 50vw;
@@ -235,12 +230,32 @@ p {
         background-position: center;
     }
 
+    .about-bg {
+        max-width: 100%;
+        min-height: 20vh;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .hero {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: auto;
+        margin: 0 auto;
+        display: flex;
+        color: #fdfdfd;
+        background-size: cover;  
+    }
     .rooster-hero {
         font-size: calc(1.525rem + 3.3vw);
     }
-    
 
-    .section-title{
+
+    .section-title {
         font-size: calc(1.525rem + 3.3vw);
     }
 
@@ -250,23 +265,13 @@ p {
 
     .icon {
         border-radius: 10%;
-        height: 100px;
-        width: 100px;
-        margin: 15px;
-        padding: 1em; 
+        width: 5.5em;
+        height: 5.5em;
+        margin: 5px;
+        padding: 1em;
         border: 3px solid rgb(247, 247, 247);
-        
-    
-    }
-    /* .details-info{
-        max-width: 100%;
-        min-height:  50vh;
-        min-width: 50vw;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    } */
 
+    }
 }
 
 
