--- a/style.css
+++ b/style.css
@@ -13,13 +13,16 @@
 body {
     text-align: center;
     margin: 0 auto;
+    background-color:rgb(235, 232, 232)
 }
 
 .container {
     min-height: 80vh;
     padding: 0 1em;
+    
 
 }
+
 
 #hero-bg {
     background-image: url("assets/hero.jpg");
@@ -128,9 +131,9 @@ body {
 
 
 /* ----- about ----- */
-#about-container {
+/* #about-container {
     background-color: #ccc;
-}
+} */
 
 .about-bg {
     background-image: url("assets/img-1.jpg");
@@ -151,7 +154,7 @@ body {
 /* ----- principles ----- */
 #principles-bg {
     min-height: 600px;
-    background-color: #ccc;
+    background-color: rgb(235, 232, 232);
 
 }
 
@@ -212,6 +215,15 @@ p {
     text-shadow: 3px 3px 3px rgba(247, 241, 241, 0.5)
 }
 
+.card-header {
+    font-family: 'Lora', serif;
+    font-family: 'Playfair Display', serif;
+    font-size: 5vw;
+}
+
+#myCarousel{
+    border-radius: 50px;
+}
 /* media-queries */
 
 
@@ -273,6 +285,7 @@ p {
 
     }
 }
+
 
 
 
