ready to launch

--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@
 /* imports */
 
 
-/* html, body{
-    height: 100%;
-    width: 100%;
-} */
-
 body {
     text-align: center;
     margin: 0 auto;
@@ -22,6 +17,57 @@ body {
     
 
 }
+
+#footer {
+    min-height: 5vh;
+    max-height:5vh;
+    margin: 15px;
+}
+
+.social {
+    min-height: 4vh;
+}
+
+.glow-button:hover {
+    color: rgba(255, 255, 255, 1);
+  box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+}
+
+.expertise-i,
+ .hygiene-i,
+ .lab-i,
+ .retention-i{
+     display: none;
+ }
+
+ .home-expertise:hover + .expertise-i  {
+    font-family: 'Lora', serif;
+    font-family: 'Playfair Display', serif;
+    display: block;
+    color: red;
+
+    
+  }
+ .home-hygiene:hover + .hygiene-i {
+    font-family: 'Lora', serif;
+    font-family: 'Playfair Display', serif;
+    display: block;
+    color: red;
+  
+  }
+ .home-lab:hover + .lab-i {
+    font-family: 'Lora', serif;
+    font-family: 'Playfair Display', serif;
+    display: block;
+    color: red;
+   
+  }
+ .home-retention:hover + .retention-i {
+    font-family: 'Lora', serif;
+    font-family: 'Playfair Display', serif;
+    display: block;
+    color: red;
+ }
 
 
 #hero-bg {
@@ -131,10 +177,6 @@ body {
 
 
 /* ----- about ----- */
-/* #about-container {
-    background-color: #ccc;
-} */
-
 .about-bg {
     background-image: url("assets/img-1.jpg");
     background-repeat: no-repeat;
@@ -146,14 +188,9 @@ body {
 
 
 
-
-/* ----- about ----- */
-
-
-
 /* ----- principles ----- */
 #principles-bg {
-    min-height: 600px;
+     min-height: 80vh;
     background-color: rgb(235, 232, 232);
 
 }
@@ -161,33 +198,23 @@ body {
 /* ----- team ----- */
 #team-bg {
     background-image: url("assets/banner-2.jpg");
-    min-height: 600px;
+    min-height: 80vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
 }
 
-/* ----- carousel ----- */
-
-
-
-
-
 
 /* -------------------------------------------------------- */
 
-/* details */
 
-
-
-.icon {
+.icon  {
     border-radius: 10%;
     width: 8em;
     height: 8em;
     margin: 20px;
     padding: 1em;
     border: 3px solid rgb(247, 247, 247);
-
 
 }
 
@@ -209,7 +236,7 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
-    min-height: 60vh;
+    min-height: 80vh;
     position: relative;
     color: rgb(254, 250, 250);
     text-shadow: 3px 3px 3px rgba(247, 241, 241, 0.5)
@@ -221,12 +248,14 @@ p {
     font-size: 5vw;
 }
 
-#myCarousel{
-    border-radius: 50px;
-}
+/*  */
 /* media-queries */
 
-
+@media (min-width: 768px) {
+    #myCarousel {
+        max-width: 75%;
+    }
+}
 @media (max-width: 768px) {
 
     .container,
@@ -284,12 +313,13 @@ p {
         border: 3px solid rgb(247, 247, 247);
 
     }
+
 }
 
 
 
 
-
+/* REACH GOALS ->  */
 
 
 
